--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.datasource.username = your_username
 spring.datasource.password = your_password
 
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
@@ -15,7 +18,11 @@ jwt.expiration=3600000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your_gmail@gmail.com
-spring.mail.password=your_password 
+spring.mail.username=your_gmail
+spring.mail.password=your_app_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.security.oauth2.client.registration.google.client-id=your_client_id
+spring.security.oauth2.client.registration.google.client-secret=your_client_secret
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
