Configure app to use env vars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:postgresql://localhost:5432/your_db
-spring.datasource.username = your_username
-spring.datasource.password = your_password
+spring.datasource.url = jdbc:postgresql://localhost:5432/${db_name}
+spring.datasource.username = ${db_username}
+spring.datasource.password = ${db_password}
 
 spring.jpa.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -13,16 +13,16 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 
-jwt.secret=your_secret
+jwt.secret=${jwt_secret}
 jwt.expiration=3600000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your_gmail
-spring.mail.password=your_app_password
+spring.mail.username=${mail_username}
+spring.mail.password=${mail_password} 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.security.oauth2.client.registration.google.client-id=your_client_id
-spring.security.oauth2.client.registration.google.client-secret=your_client_secret
+spring.security.oauth2.client.registration.google.client-id=${oauth2_client_id}
+spring.security.oauth2.client.registration.google.client-secret=${oauth2_client_secret}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
