Move jwt expiration to .env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.servlet.multipart.max-request-size=50MB
 
 
 jwt.secret=${jwt_secret}
-jwt.expiration=3600000
+jwt.expiration=${jwt_expiration}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
